@@ -1,6 +1,6 @@
 {
   "name": "simp-libreswan",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "author": "SIMP Team",
   "summary": "Manages IPSec VPN Tunnels",
   "license": "Apache-2.0",
