@@ -1,24 +1,0 @@
-# This nodeset spins up a simple one-host test VM for both EL6 and EL7
-HOSTS:
-  centos-7:
-    roles:
-      - server
-      - default
-      - master
-    platform:   el-7-x86_64
-    box:        puppetlabs/centos-7.0-64-nocm
-    box_url:    https://vagrantcloud.com/puppetlabs/boxes/centos-7.0-64-nocm
-    hypervisor: vagrant
-  centos-6:
-    roles:
-      - agent
-      - client
-    platform:   el-6-x86_64
-    box:        puppetlabs/centos-6.6-64-nocm
-    box_url:    https://vagrantcloud.com/puppetlabs/boxes/centos-6.6-64-nocm
-    hypervisor: vagrant
-CONFIG:
-  log_level: verbose
-  type:      foss
-  vagrant_memsize: 256
-  ## vb_gui: true
